--- a/app/views/designers/index.html.erb
+++ b/app/views/designers/index.html.erb
@@ -23,11 +23,11 @@
   body {
     margin: 0;
   }
-  .ad-container {
+  .partner-container {
   width: 100%;
   text-align: center;
   }
-  .ad-card {
+  .partner-card {
   display: flex;
   align-items: center;
   justify-content: center;
