--- a/app/views/oeuvres/_form.html.erb
+++ b/app/views/oeuvres/_form.html.erb
@@ -264,7 +264,7 @@
                class="image-grid-container"
                data-controller="sortable">
             <%= form.fields_for :oeuvre_images, @oeuvre.oeuvre_images.sort_by { |img| img.position || 0 } do |image_form| %>
-              <div class="image-upload-card" 
+              <div class="image-uplopartner-card" 
                    data-controller="image-preview" 
                    data-sortable-target="item">
                 <%= image_form.hidden_field :position, data: { 'sortable-target': 'positionInput' } %>
