--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -60,7 +60,7 @@ input[type="search"]::-webkit-search-cancel-button {
 }
 
 /* --- La carte d'upload --- */
-.image-upload-card {
+.image-uplopartner-card {
   width: 22vw;
   display: flex;
   flex-direction: column;
@@ -72,12 +72,12 @@ input[type="search"]::-webkit-search-cancel-button {
   background-color: #fafafa;
   transition: all 0.2s ease;
 }
-.image-upload-card:hover {
+.image-uplopartner-card:hover {
   border-color: #999; /* Feedback au survol */
   background-color: #fff;
 }
 /* Style quand on est en train de glisser */
-.image-upload-card.sortable-chosen {
+.image-uplopartner-card.sortable-chosen {
   border-color: #007bff;
   background-color: #f0f8ff;
 }
@@ -201,7 +201,7 @@ input[type="search"]::-webkit-search-cancel-button {
   .image-grid-container {
     flex-direction: column !important;
   }
-  .image-upload-card {
+  .image-uplopartner-card {
     width: 90%;
   }
 }
